Changes for 1.0beta7:

 - all <? ?> were changed to <?php ?>. No changes in php.ini required anymore.
   (Alexei)
 - added Zabbix agent for WIN32 platforms. Thanks to Victor Kirhenstein. (Alexei) 
 - fixed coredump in get_lstvalue(). Thanks to Rickard Plars. (Alexei)
 - delay renamed to "Update interval (in sec)" in item definition form
 (Alexei)
 - create/mysql/schema.sql will create tables with type=InnoDB by default
 (Alexei)
 - added upgrades/dbpatches/1.0beta6_to_1.0beta7/ with patches (Alexei)
 - added item type TRAPPER (Alexei) 
 - fixes for PostgreSQL (Alexei)
 - added validation of host name (Alexei)
 - default value of StartSuckers is set to 4 (Alexei) 
 - fixed Select in Status of Triggers (Alexei)
 - precision of Change is set to 2 in Latest Values (Alexei)
 - --enable-static to work on all platforms (Alexei)
 - zabbix_sender to be able to get information from stdin (Alexei)
 - support fo JavaScript required now (Alexei)
 - automatic resize of all graphs depending on screen size (Alexei)
 - got rid of message "Bad protocol identification '0'" when doing check_service[ssh]
 (Alexei)
 - performance improvements for zabbix_suckerd (Alexei)
 - added support of CSS (Alexei)
 - support of processor load on Solaris 2.6. Thanks to Mariusz. (Alexei)
 - improvements for user-defined graphs. Thanks to Mariusz. (Alexei)
 - improvements for System Maps. Thanks to Mariusz. (Alexei)
 - support for host groups (Alexei)
 - added table hosts_groups (Alexei)
 - added table groups (Alexei)
 - ./configure to find PostgreSQL's includes in /usr/local/include
 (Alexei)
 - basic support for log rotating (Alexei)
 - added additional error checks in get_value_snmp() (Alexei)

Changes for 1.0beta6:

 - parameter StatFile removed (Alexei)
 - added support for check_service(service,ip,port) (Alexei)
 - added support for check_port(ip,port) (Alexei)
 - fixed check_right(). Thanks to Daniel Higgins. (Alexei)
 - more changes to send_email(). Thanks to Daniel Higgins. (Alexei)