@@ -1,5 +1,7 @@
 Changes for 1.0beta7:
 
+ - pinger.pl will use mass-send of collected data. No unnecessary forks
+   anymore. (Alexei)
  - all <? ?> were changed to <?php ?>. No changes in php.ini required anymore.
    (Alexei)
  - added Zabbix agent for WIN32 platforms. Thanks to Victor Kirhenstein. (Alexei) 
